// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render h1 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h1
  class="typography-h1-variant-basekick-1 typography-grey600-color-2 typography-strong-support-3 typography-regular-weight-4 -h1 c0"
  data-id="heading"
>
  Heading H1
</h1>
`;

exports[`It can render h1 medium weight 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h1
  class="typography-h1-variant-basekick-21 typography-grey600-color-22 typography-strong-support-23 typography-medium-weight-24 -h1 c0"
  data-id="heading"
>
  Heading H1
</h1>
`;

exports[`It can render h2 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h1
  class="typography-h1-variant-basekick-6 typography-grey600-color-7 typography-strong-support-8 typography-regular-weight-9 -h1 c0"
  data-id="heading"
>
  Heading H1
</h1>
`;

exports[`It can render h2 medium weight 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h2
  class="typography-h2-variant-basekick-26 typography-grey600-color-27 typography-strong-support-28 typography-medium-weight-29 -h2 c0"
  data-id="heading"
>
  Heading H1
</h2>
`;

exports[`It can render h3 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h1
  class="typography-h1-variant-basekick-11 typography-grey600-color-12 typography-strong-support-13 typography-regular-weight-14 -h1 c0"
  data-id="heading"
>
  Heading H1
</h1>
`;

exports[`It can render h4 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<h1
  class="typography-h1-variant-basekick-16 typography-grey600-color-17 typography-strong-support-18 typography-regular-weight-19 -h1 c0"
  data-id="heading"
>
  Heading H1
</h1>
`;

exports[`It can render heaading truncated 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<div
  class="MuiBox-root MuiBox-root-32"
  style="width: 90px;"
>
  <h2
    class="typography-h2-variant-basekick-33 typography-grey600-color-34 typography-strong-support-35 typography-regular-weight-36 -h2 c0"
    data-id="heading"
  >
    <div
      class="MuiBox-root MuiBox-root-38 typography-truncate-37"
    >
      Truncated text
    </div>
  </h2>
</div>
`;
